--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,11 @@ org.gradle.parallel=true
 group_id=me.roundaround
 mod_id=itemsigns
 mod_version = 1.1.0
-minecraft_version=1.21.5
-yarn_mappings=build.1
+minecraft_version=1.21.4
+yarn_mappings=build.8
 loader_version=0.16.10
-fabric_version=0.123.2
-mod_menu_version=14.0.0-rc.2
+fabric_version=0.119.2
+mod_menu_version=13.0.0-beta.1
 dev_login_version=3.5
 
 roundalib_plugin_maven_local=true
