--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,12 @@ org.gradle.parallel=true
 group_id=me.roundaround
 mod_id=itemsigns
 mod_version = 1.1.0
-minecraft_version=1.21.2
-yarn_mappings=build.1
+minecraft_version=1.21
+yarn_mappings=build.9
 loader_version=0.16.9
-fabric_version=0.106.1
-mod_menu_version=12.0.0-beta.1
+roundalib_snapshot=false
+fabric_version=0.102.0
+mod_menu_version=11.0.1
 dev_login_version=3.5
 
 roundalib_plugin_maven_local=true
